cmake_minimum_required(VERSION 3.26)
project(c)

set(CMAKE_CXX_STANDARD 14)

add_executable(c
        1.c
        2.c
        3.c
        bsort.c
        bubble.c
        bug.c
        cpyarray.c
        delete.c
        dsewd.c
        enum.c
        fact.c
        function.c
        hell.cpp
        hello.cpp
        inoutarr.c
        inoutarr.cpp
        insertion.c
        maxminarr.c
        maxmn.c
        multistr.c
        negelement.c
        pointer.c
        posneg.c
        printalph.c
        recursion1.c
        revarray.c
        seeta.c
        setA.c
        sorting.c
        sortnames.c
        sortnamesusingpointers.c
        str.c
        stringbsort.c
        sumarr.c
        sumn.c
        Untitled1.cpp
        vowel.c
        insert.h
        linkedstack.c)
